not ALL connections are made, only begin + resources added

--- a/FinalFinanceTrack.csproj
+++ b/FinalFinanceTrack.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="NuGet.Frameworks" Version="6.9.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="resources\" />
+  </ItemGroup>
+
 </Project>
