--- a/FinalFinanceTrack.csproj
+++ b/FinalFinanceTrack.csproj
@@ -9,12 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="resources\logo.png" />
+    <None Remove="resources\only logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.4.0" />
     <PackageReference Include="NuGet.Frameworks" Version="6.9.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="resources\" />
+    <Resource Include="resources\logo.png" />
+    <Resource Include="resources\only logo.png" />
   </ItemGroup>
 
 </Project>
