profile pic window added, button added in the settingswindow

--- a/FinalFinanceTrack.csproj
+++ b/FinalFinanceTrack.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExifLib.Standard" Version="1.7.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="MySql.Data" Version="8.4.0" />
     <PackageReference Include="NuGet.Frameworks" Version="6.10.0" />
